:zap: moved to component-skeleton

--- a/demo/pages/index.astro
+++ b/demo/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Card from "../components/Card.astro";
+import Card from "../../src/Card.astro";
 import { Code } from "astro:components";
 import "@picocss/pico/css/pico.classless.yellow.min.css";
 ---
